2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Fixed the groups combo
	in the networkmaps options to show only visible groups
	merge from trunk

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager.php: Removed update manager from
	menu for users without PM permissions

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/search_agents.php
	operation/search_graphs.php
	operation/search_alerts.php
	operation/search_reports.php
	operation/search_maps.php
	operation/search_results.php
	operation/search_users.php: Restructured and fixed ACLs
	in the main search merged from trunk

2010-08-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php: Fixed ACL merged
	from trunk

2010-08-29  Sancho Lerena  <slerena@artica.es>

	* include/pchart_graph.php,
	include/functions_fsgraph.php: Minor (but important) changes on
	graphs: combined wired mode available on flash, improved legends
	on both types, and improved flash wired modes. 

	(Ported from Trunk)

2010-08-26  Sancho Lerena <slerena@artica.es>

    * include/functions_custom_graphs.php: Fixed ACL.

    * include/functions_agents.php: Fixed ACL on agent search AJAX control.

    * extensions/users_connected.php; Hidden for standard users.

    * operation/events/events_marquee.php: ACL controls.

    * operation/events/events.php: Hide system events to standard users.

    * operation/menu.php: Hide user view on standard users.

2010-08-18  Sancho Lerena <slerena@artica.es>

	* include/functions_io.php
	include/functions_ui.php
	include/functions.php
	index.php
	operation/agentes/gis_view.php
	extras/pandora_diag.php
	general/pandora_help.php
	general/footer.php
	general/login_page.php: Security fixes ported from trunk/3.2 version.

2010-08-18  Sancho Lerena <slerena@artica.es>

	* pandora_console.redhat.spec: Some minimal updates on Redhat RPM
	about the logrotate.
